--- a/Practicas/1/index.html
+++ b/Practicas/1/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis iste doloribus dolorem magni iusto harum nihil quo mollitia nobis, voluptate earum. Deserunt maxime vitae totam! 
+
+    </h1>
+    <img src="reggae.jpg" alt="Girl in a jacket" width="500" height="600"> 
+    <img src="beach.jpg" alt="Girl in a jacket" style="border: 3px solid black;display: block; "  width="500" height="600"> 
+
 </body>
 </html>
