--- a/Practicas/1/index.html
+++ b/Practicas/1/index.html
@@ -9,8 +9,15 @@
     <h1> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis iste doloribus dolorem magni iusto harum nihil quo mollitia nobis, voluptate earum. Deserunt maxime vitae totam! 
 
     </h1>
-    <img src="reggae.jpg" alt="Girl in a jacket" width="500" height="600"> 
-    <img src="beach.jpg" alt="Girl in a jacket" style="border: 3px solid black;display: block; "  width="500" height="600"> 
+    <img src="reggae.jpg" alt="Girl in a jacket" style="border: 3px solid black; width="500" height="600"> 
+    <img src="beach.jpg" alt="Girl in a jacket" style="border: 3px solid black; "  width="500" height="600"> 
+     
+    <h2>
+        Otro parrafo
 
+    </h2>
+    <img src="Nature.jpg" alt="Nature" style="border: 3px solid black; width: ="500" height="600" ;
+
+    <h3> Ultimo parrafo </h3>
 </body>
 </html>
