--- a/Practicas/2/tarea2.html
+++ b/Practicas/2/tarea2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Te he dicho de no tocarme...</h1>
+   <h1>Te he dicho que no me toques...</h1>
    <style>
         h1 {
             
