--- a/Practicas/16/index.html
+++ b/Practicas/16/index.html
@@ -23,17 +23,18 @@
     <div>
         <h1>
             You're more than <br>
-            your job title.</h1> 
-            <h2>Polywork is empowering the next generation of professionals to build their personal brand & make side income. Create your free site today.</h2> 
-            <a class="boton2" href="">Get Started</a>
-            <div class="scroll">
+            your job title. 
+        </h1> 
+        <h2>Polywork is empowering the next generation of professionals to build their personal brand & make side income. Create your free site today.</h2> 
+        <a class="boton2" href="">Get Started</a>
+        <div class="scroll">
             <div class="contenedor-imagenes"> 
-            <img class="img" src="1.webp" alt="img1">
-            <img class="img" src="2.webp" alt="img2">
-            <img class="img imgdx" src="3.webp" alt="img3">
+                <img class="img" src="1.webp" alt="img1">
+                <img class="img" src="2.webp" alt="img2">
+                <img class="img imgdx" src="3.webp" alt="img3">
+            </div>
         </div>
-    </div>
-       
+    </div>  
 </body>
 
 </html>
