--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <li><a href="Practicas/12/index.html">Proyecto 12</a></li>
             <li><a href="Practicas/14/index.html">Proyecto 14</a></li>
             <li><a href="Practicas/15/index.html">Proyecto 15</a></li>
+            <li><a href="Practicas/16/index.html">Proyecto 16</a></li>
             <li><a href="Practicas/19/index.html">Proyecto 19</a></li>
-            
         </ul>
     </div>
 </body>
