--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>Mis Proyectos</h1>
         <ul>
             <li><a href="Practicas/1/index.html">Proyecto 1</a></li>
-            <li><a href="Practicas/2/tarea2.html">Proyecto 2</a></li>
-            <li><a href="Practicas/3/tarea3.html">Proyecto 3</a></li>
-            <li><a href="Practicas/4/tarea4.html">Proyecto 4</a></li>
-            <li><a href="Practicas/5/tarea5.html">Proyecto 5</a></li>
-            <li><a href="Practicas/6/tarea6.html">Proyecto 6</a></li>
-            <li><a href="Practicas/7/tarea7.html">Proyecto 7</a></li>
-            <li><a href="Practicas/8/tarea8.html">Proyecto 8</a></li>
+            <li><a href="Practicas/2/index.html">Proyecto 2</a></li>
+            <li><a href="Practicas/3/index.html">Proyecto 3</a></li>
+            <li><a href="Practicas/4/index.html">Proyecto 4</a></li>
+            <li><a href="Practicas/5/index.html">Proyecto 5</a></li>
+            <li><a href="Practicas/6/index.html">Proyecto 6</a></li>
+            <li><a href="Practicas/7/index.html">Proyecto 7</a></li>
+            <li><a href="Practicas/8/index.html">Proyecto 8</a></li>
             <li><a href="Practicas/9/index.html">Proyecto 9</a></li>
             <li><a href="Practicas/10/index.html">Proyecto 10</a></li>
             <li><a href="Practicas/11/index.html">Proyecto 11</a></li>
@@ -26,6 +26,7 @@
             <li><a href="Practicas/15/index.html">Proyecto 15</a></li>
             <li><a href="Practicas/16/index.html">Proyecto 16</a></li>
             <li><a href="Practicas/19/index.html">Proyecto 19</a></li>
+            <li><a href="Practicas/20/index.html">Proyecto 20</a></li>
         </ul>
     </div>
 </body>
