--- a/Practicas/22/index.html
+++ b/Practicas/22/index.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <img class="mene" src="img.svg">
+            <div class="nav-links">
             <select name="cars">
                 <option value="volvo">Volvo</option>
                 <option value="saab">Saab</option>
@@ -20,7 +21,7 @@
                 <a href="">login</a>
                 <a href="">registrate</a>
                <a><img class="luna" src="luna2.jpeg" alt="Luna"></a> 
-            
+            </div>
               
         </nav>
     </header>
