--- a/Practicas/22/index.html
+++ b/Practicas/22/index.html
@@ -11,11 +11,11 @@
         <nav>
             <img class="mene" src="img.svg">
             <div class="nav-links">
-            <select name="cars">
-                <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-                <option value="audi">Audi</option>
+            <select name="portada">
+                <option value="volvo">Portada</option>
+                <option value="saab">Nuevas</option>
+                <option value="mercedes">Articulos</option>
+                <option value="audi">Popular</option>
               </select>
             
                 <a href="">login</a>
