--- a/Practicas/22/index.html
+++ b/Practicas/22/index.html
@@ -63,7 +63,7 @@
                 <img src="not2.jpeg" alt="Palestina">
             </div>
             <a class="link2"
-            href="https://autocritica.es/articulos/palestina-un-vistazo-al-pasado-una-mirada-al-presente/161">autocritica.es</a>
+                href="https://autocritica.es/articulos/palestina-un-vistazo-al-pasado-una-mirada-al-presente/161">autocritica.es</a>
             <p class="texto3">
                 Cómic en PDF sumamente interesante y didáctico realizado por Bernardo Vergara que trata el Drama
                 Palestino desde sus inicios. Aunque realizado en 2012, aplica a nuestros días y explica tanto la
@@ -75,6 +75,30 @@
             </p>
         </div>
     </div>
+    <footer>
+        <div class="imagemene2">
+            <img class="mene2" src="footer.svg" alt="footer">
+        </div>
+      <div class="linkfooter">
+        <a class="link3"> Ayuda </a>
+        <a class="link4"> FAQ</a>
+        <a class="link4"> Contactos</a>
+        <a class="link4"> Aviso Legal</a>
+      </div>
+      <div class="linkfooter2">
+        <a class="link5">+Menéame</a>
+        <a class="link6">Blog</a>
+        <a class="link6">Nótame</a>
+        <a class="link6">Twitter</a>
+        <a class="link7">Version Anterior</a>
+      </div>
+      <div class="linkfooter3">
+        <a class="link8">Estadísticas</a>
+        <a class="link9">Más votadas</a>
+        <a class="link9">Más visitadas</a>
+        <a class="link9">Más comentadas</a>
+      </div>
+    </footer>
 </body>
 
 </html>
