--- a/Practicas/28/index.html
+++ b/Practicas/28/index.html
@@ -43,7 +43,7 @@
     
     
         <footer class="derecha-footer">
-            <p>ChatGPT can make mistakes. Consider checking important information.</p>
+            <p>MicoGPT can make mistakes. Consider checking important information.</p>
         </footer>
     </div>
     <script src="script.js"></script>
