--- a/Practicas/28/index.html
+++ b/Practicas/28/index.html
@@ -21,9 +21,9 @@
         <p class="texto1">Hola Mundo</p>
 
         <p class="hoy">Ultimos 7 dias</p>
-        <p class="texto1">Martin es el amo?</p>
-        <p class="texto1">Como flexear?</p>
-        <p class="texto1">Hola Mundo</p>
+        <p class="texto1">Gatos=Demonios?</p>
+        <p class="texto1">Como hacer BIEN la carbonara</p>
+        <p class="texto1">Ayuda con JS</p>
     </div>
 
     <div class="derecha">
