--- a/Practicas/28/index.html
+++ b/Practicas/28/index.html
@@ -29,7 +29,7 @@
     <div class="derecha">
 
         <h2>Bienvenid@s en MicoGpt</h2>
-        <p> Escibes algo</p>
+        <p> Escribes algo</p>
         
         <p id="respuesta"></p>
         
