--- a/Practicas/28/index.html
+++ b/Practicas/28/index.html
@@ -29,7 +29,8 @@
     <div class="derecha">
 
         <h2>Bienvenid@s en MicoGpt</h2>
-        <p> Escribes algo</p>
+        <img class="logo2" src="Open.png" alt="logo2">
+        <p class="help"> How can I help you today?</p>
         
         <p id="respuesta"></p>
         
