--- a/Practicas/2/index.html
+++ b/Practicas/2/index.html
@@ -19,7 +19,7 @@
     <img src="gato1.jpg" alt="gato1" style="border: 3px solid red; width="500" height="600"
   
 </body>
-<h2> Soy el puto amo  </h2>
+<h2> Soy el mejor  </h2>
 <style>
     h2 {
         
