--- a/Practicas/23/index.html
+++ b/Practicas/23/index.html
@@ -29,6 +29,18 @@
 
 
     <img class="flecha" src="arro.png" alt="flecha">
+
+<div class="green">
+    <h2> About </h2>
+
+
+
+    <h3> Hello! My name is Martin. I am currently living in Dresden while I am currently studying my second year of web and applications design at the CIFP Ponferrada.
+        I want to be a part of a team where I can contribute with my diverse experience and passion.</h3>
     
+
+
+    <h2> Skills </h2>
+</div>
 </body>
 </html>
