--- a/Practicas/23/index.html
+++ b/Practicas/23/index.html
@@ -17,9 +17,9 @@
         <a href=""> Resume </a>
         <a href=""> Contact </a>
     </nav>
-    <div class="trigger-area">NEW</div>
+   
     <div class="floating-card">
-
+        <div class="trigger-area">NEW</div>
         <div class="content">
 
             <h2>My new portfolio here:</h2>
@@ -46,18 +46,21 @@
         <h2> Skills </h2>
     </div>
     <div class="containerlogo">
-    <div class="logos">
+        <div class="logos">
 
-    <img src="Img/html.png" alt="html">
-    <img src="Img/css.png" alt="css">
-    <img src="Img/js.png" alt="js">
-    <br>
-    <img src="Img/Mysql.png" alt="sql">
-    <img src="Img/ruby.png"  alt="ruby">
-    <img src="Img/firebase.png" alt="fire">
+            <img src="Img/html.png" alt="html">
+            <img src="Img/css.png" alt="css">
+            <img src="Img/js.png" alt="js">
+            
+            <img src="Img/Mysq.png" alt="sql">
+            <img src="Img/ruby.png" alt="ruby">
+            <img src="Img/firebase.png" alt="fire">
 
+            <img src="Img/react.png" alt="react">
+            <img src="Img/git.png"   alt="git">
+
+        </div>
     </div>
-</div>
 </body>
 
 </html>
