--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="Practicas/19/index.html">Proyecto 19</a></li>
             <li><a href="Practicas/20/index.html">Proyecto 20</a></li>
             <li><a href="Practicas/22/index.html">Proyecto 22</a></li>
+            <li><a href="Practicas/23/index.html">Proyecto 23</a></li>
             <li><a href="Practicas/28/index.html">Proyecto 28</a></li>
         </ul>
     </div>
