--- a/Practicas/15/index.html
+++ b/Practicas/15/index.html
@@ -11,7 +11,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="menu.html">Menú</a>
-            <a href="contactos.html">Contacto</a>
+            <a href="contactos.html">Contactos</a>
         </nav>
     </header>
     <main>
