--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="Practicas/20/index.html">Proyecto 20</a></li>
             <li><a href="Practicas/22/index.html">Proyecto 22</a></li>
             <li><a href="Practicas/23/index.html">Proyecto 23</a></li>
+            <li><a href="Practicas/27/index.html">Proyecto 27</a></li>
             <li><a href="Practicas/28/index.html">Proyecto 28</a></li>
         </ul>
     </div>
