--- a/Practicas/29/about.html
+++ b/Practicas/29/about.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="styles.css">
     <title>Products</title>
 </head>
-<body>
-    <div class="nav">
+<body class="about" >
+    <nav>
+        <img src="Images/logo.png" alt="logo">
+        <div class="textnav">
+            <a href="index.html"> Home </a>
+            <a href="products.html"> Products </a>
+            <a href="about.html">About us</a>
+            <a href="contacts.html">Contacts</a>
 
-        <nav>
-           <a href="index.html"> Home </a>
-           <a href="products.html"> Products </a>
-           <a href="about.html">About us</a>
-           <a href="contacts.html">Contacts</a>
-        </nav>
-    </div>
+        </div>
+    </nav>
+    <footer>Enviroute© 2023</footer>
 </body>
 </html>
