--- a/Practicas/29/index.html
+++ b/Practicas/29/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div class="nav">
+    
 
         <nav>
-            <img src="logo.png" alt="logo">
+            <img src="Images/logo.png" alt="logo">
             <div class="textnav">
                 <a href="index.html"> Home </a>
                 <a href="products.html"> Products </a>
@@ -22,11 +22,12 @@
 
             </div>
         </nav>
-    </div>
+    
 
     <div class="pres">
         <p> Welcome to Enviroute </p>
     </div>
+    <footer>Enviroute© 2023</footer>
 </body>
 
 </html>
