--- a/Practicas/29/contacts.html
+++ b/Practicas/29/contacts.html
@@ -17,6 +17,14 @@
 
         </div>
     </nav>
+    <div class="prescont">
+        <p>Social Media</p>
+        
+        <a href="index.html"><img src="Images/face.png" alt="face"></a>
+        <a href="products.html"><img src="Images/Insta.png" alt="insta"></a>
+        <a href="about.html"><img src="Images/twi.png" alt="twi"></a>
+        <a href="contacts.html"><img src="Images/wapp.png" alt="wapp"></a>
+    </div>
     <footer>Enviroute© 2023</footer>
 </body>
 </html>
