--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="Practicas/23/index.html">Proyecto 23</a></li>
             <li><a href="Practicas/27/index.html">Proyecto 27</a></li>
             <li><a href="Practicas/28/index.html">Proyecto 28</a></li>
+            <li><a href="Practicas/29/index.html">Proyecto 29</a></li>
         </ul>
     </div>
 </body>
