--- a/Practicas/29/about.html
+++ b/Practicas/29/about.html
@@ -17,6 +17,15 @@
 
         </div>
     </nav>
+    
+    <div class="aboutus">
+
+        <p class="textabout">What Is A Green Product?
+
+            A green product is a sustainable product designed to minimize its environmental impacts during its whole life-cycle and even after it’s of no use.
+            
+            Green products are usually identified by having two basic goals – reducing waste and maximizing resource efficiency. They are manufactured using toxic-free ingredients and environmentally-friendly procedures and are certified by recognized organizations like Energy star, Forest Stewardship Council, etc.</p>
+    </div>
     <footer>Enviroute© 2023</footer>
 </body>
 </html>
