--- a/Practicas/29/products.html
+++ b/Practicas/29/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Products</title>
 </head>
+
 <body class="pageproduct">
     <nav>
         <img src="Images/logo.png" alt="logo">
@@ -17,6 +19,15 @@
 
         </div>
     </nav>
+    <div class="green">
+
+        <h1><img src="Images/green.png" alt="green"></h1>
+
+    </div>
+    <div class="producttext">
+        <p class="greentext">Here you have a list of our products</p>
+    </div>
     <footer>Enviroute© 2023</footer>
 </body>
+
 </html>
