--- a/Practicas/FP/Menken/index.html
+++ b/Practicas/FP/Menken/index.html
@@ -10,17 +10,17 @@
     <div class="container">
         <nav class="vertical-nav">
             <ul>
-                <li><a href="index.html"><button>Gobierno</button></a></li>
-                <li><a href="matrimonio.html"><button>Matrimonio</button></a></li>
-                <li><a href="religion.html"><button>Religión</button></a></li>
-                <li><a href="etica.html"><button>Ética</button></a></li>
-                <li><a href="otros.html"><button>Otros</button></a></li>
+                <li><a class="active" href="index.html">Gobierno</a></li>
+                <li><a href="matrimonio.html">Matrimonio</a></li>
+                <li><a href="religion.html">Religión</a></li>
+                <li><a href="etica.html">Ética</a></li>
+                <li><a href="otros.html">Otros</a></li>
             </ul>
         </nav>
         <div class="contenedor-cuerpo">
 
             <div class="cuerpo">
-                <p> El principal valor del dinero radica en que lo estimamos más de lo que vale.</p>
+                <p> El principal fis valor del dinero radica en que lo estimamos más de lo que vale.</p>
             </div>
         <div class="cuerpo">
             <p> Tópico: idea que (a) es admitida por cierta por todo el mundo, y (b) no es cierta.</p>
