--- a/Practicas/FP/Menken/matrimonio.html
+++ b/Practicas/FP/Menken/matrimonio.html
@@ -10,11 +10,11 @@
     <div class="container">
         <nav class="vertical-nav">
             <ul>
-                <li><a href="index.html"><button>Gobierno</button></a></li>
-                <li><a href="matrimonio.html"><button>Matrimonio</button></a></li>
-                <li><a href="religion.html"><button>Religión</button></a></li>
-                <li><a href="etica.html"><button>Ética</button></a></li>
-                <li><a href="otros.html"><button>Otros</button></a></li>
+                <li><a href="index.html">Gobierno</a></li>
+                <li><a class="active" href="matrimonio.html">Matrimonio</a></li>
+                <li><a href="religion.html">Religión</a></li>
+                <li><a href="etica.html">Ética</a></li>
+                <li><a href="otros.html">Otros</a></li>
             </ul>
         </nav>
         <div class="contenedor-cuerpo">
