--- a/Practicas/FP/Emperadores/augusto.html
+++ b/Practicas/FP/Emperadores/augusto.html
@@ -11,21 +11,16 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Augusto (63 a.C. - 14 d.C., emperador: 27 a.C. - 14 d.C.)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/augusto.jpg" alt="aug">
+            <p> General, político y el primer emperador romano. De gran paciencia y habilidad, transformó la vida romana
+                trayendo prosperidad y paz al mundo grecorromano. Su verdadero nombre era Cayo Octavio, el cual cambió
+                tras la muerte de su padre adoptivo, Julio César, primero por Cayo Julio César Octaviano y después por
+                Augusto o César Augusto.
 
             </p>
         </div>
@@ -34,7 +29,7 @@
         <img class="monedas2" src="Img/monedas_2.jpg" alt="monedas2" usemap="#image-map2">
         <map name="image-map">
             <area target="_blank" alt="Adriano" title="Adriano" href="adriano.html" coords="6,3,98,80" shape="rect">
-            <area target="_blank" alt="Augusto" title="Augusto" href="augusto.html" coords="7,83,93,143" shape="rect">
+            <area target="_blank" alt="Aug" title="Aug" href="augusto.html" coords="7,83,93,143" shape="rect">
             <area target="_blank" alt="Caligola" title="Caligola" href="caligula.html" coords="7,148,87,204"
                 shape="rect">
             <area target="_blank" alt="Claudio" title="Claudio" href="claudio.html" coords="11,211,84,268" shape="rect">
