--- a/Practicas/FP/Emperadores/claudio.html
+++ b/Practicas/FP/Emperadores/claudio.html
@@ -11,21 +11,23 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Claudio (10 a.C. - 54 d.C; emperador: 41 - 54)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/claudio.jpg" alt="claudio">
+            <p>Cuando Calígula murió asesinado no estaba establecido quién debía sucederle. Los pretorianos encontraron
+                escondido en palacio al tío del emperador, Claudio, apartado de la posible sucesión por su torpeza, su
+                aspecto distraído y la amnesia casi permanente que le afectaba. Pero era hermano de Germánico y eso fue
+                suficiente para que los pretorianos le designaran emperador. Claudio supo rodearse de un buen equipo de
+                expertos que dirigieron el gobierno en su nombre.<br>
+                <br> Reformó la administración y formó un aparato
+                burocrático central para el Imperio. Concedió amplios derechos de ciudadanía al tiempo que restringía la
+                política de terror impuesta por sus antecesores. Su mayor empresa será la conquista de Britania. Se casó
+                en cuatro ocasiones. La tercera es la famosa Mesalina, conocida por su libertinaje sexual que
+                escandalizaba a la nobleza romana. La cuarta esposa fue su sobrina Agripina, a quien se considera
+                responsable de su envenamiento.
 
             </p>
         </div>
