--- a/Practicas/FP/Emperadores/neron.html
+++ b/Practicas/FP/Emperadores/neron.html
@@ -11,21 +11,23 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Nerón (37 - 68; emperador 54 - 68)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/neron.jpg" alt="neron">
+            <p>Hijo de Domicio Ahenobardo y de Agripina menor y sobrino de Calígula, Nerón es el último representante de
+                la familia Julia-Claudia. Fue elegido emperador por los pretorianos con 17 años, siendo sus primeros
+                años de gobierno bastante positivos. Hizo matar a su madre, que obstaculizaba su boda con Popea Sabina.
+                Una vez casado, inició una etapa de gobierno caracterizada por los desmanes, el libertinaje y las
+                pasiones teatrales.<br>
+                <br> En el verano del año 64 a.C. tiene lugar en Roma un espectacular incendio que duró
+                seis días, consumiendo por completo tres de los catorce barrios de la urbe.El emperador acusó a los
+                cristianos del incendio. Desde este momento el emperador inauguró un régimen de terror con numerosas
+                condenas y confiscaciones. Julio Vindice y Sulpicio Galba se rebelarán apoyados por las legiones de
+                Germania. Los pretorianos se vincularon al movimiento y el Senado depuso a Nerón, declarándolo fuera de
+                la ley. El emperador huyó de Roma y se suicidó en una de sus villas el 6 de junio del año 68.
 
             </p>
         </div>
