--- a/Practicas/FP/Emperadores/nerva.html
+++ b/Practicas/FP/Emperadores/nerva.html
@@ -11,22 +11,19 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Nerva (30 - 98; emperador: 96 - 98)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
-
+            <img class="augusto" src="Img/nerva.jpg" alt="nerva">
+            <p>El primer miembro de la familia de los Antoninos fue Nerva, elegido tras el complot que acabó con la vida
+                de Domiciano. Debido a su escasa experiencia militar y a las tensiones surgidas en el seno del ejército,
+                Nerva adoptó y nombró césar a uno de los más afamados generales, Marco Ulpio Trajano. Con este gesto se
+                granjeó la simpatía del ejército e inauguro la transmisión del poder en vida. Nerva ejerció su gobierno
+                con el pleno apoyo del Senado. Nerva puso las bases del sistema alimenticio de asistencia estatal para
+                ayudar a las clases más empobrecidas. También promovió una ley agraria por la que se compraban tierras
+                para su distribución entre las clases más desfavorecidas.
             </p>
         </div>
 
