--- a/Practicas/FP/Emperadores/tiberio.html
+++ b/Practicas/FP/Emperadores/tiberio.html
@@ -11,21 +11,22 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Tiberio (42 a.C. - 37 d.C.; emperador: 14 - 37)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/tiberio.jpg" alt="tiberio">
+            <p>Tiberio, hijo menor de Agripa y Livia, era el sucesor designado de Augusto. El Senado le otorgó las
+                mismas prerrogativas que a su antecesor, asegurándose su fidelidad frente a la popularidad alcanzada por
+                Germánico. La muerte de Germánico en Siria motivó que las acusaciones sobre un presunto envenenamiento
+                se acercaran al emperador, produciéndose una fuerte convulsión en la familia imperial. Los continuos
+                complots motivaron que Tiberio fortaleciera las bases militares del Imperio, estableciendo a los
+                pretorianos en Roma.<br>
+                <br> El jefe del pretorio, Sejano, recibió el gobierno cuando Tiberio abandonó el poder
+                en el 26 para entregarse a los placeres. Cinco años después regresó y Sejano fue condenado a muerte y
+                ejecutado. Durante su reinado, las provincias gozaron de buena salud, pero paulatinamente se impuso un
+                régimen de terror. Hacia el año 33 Tiberio regresó a su retiro de Capri.
 
             </p>
         </div>
