--- a/Practicas/FP/Emperadores/trajano.html
+++ b/Practicas/FP/Emperadores/trajano.html
@@ -11,21 +11,21 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Trajano (30 - 117; emperador: 98 - 117)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/trajano.jpg" alt="trajano">
+            <p>Trajano fue el primer ciudadano romano de origen provincial (era de Hispania) que accedió al trono
+                imperial. Pronto destacó en la carrera militar tanto en Germania como en Oriente. Renovó el Senado al
+                nombrar senadores procedentes de las provincias orientales y fue eliminando numerosas tareas que fueron
+                conferidas a la burocracia.<br>
+                <br> Llevó a cabo un intenso programa de infraestructuras tanto para el
+                desplazamiento de las tropas como para el comercio, que se vio favorecido. Puentes, calzadas y canales
+                fueron construidos. La política exterior estuvo enfocada hacia la conquista. Convirtió Dacia en
+                provincia romana con lo que el mar Negro quedaba bajo su influencia. La campaña está narrada en los
+                relieves de la famosa Columna de Trajano. Un ataque de parálisis le provocó la muerte en Cilicia.
 
             </p>
         </div>
