--- a/Practicas/FP/Emperadores/antonino.html
+++ b/Practicas/FP/Emperadores/antonino.html
@@ -11,21 +11,22 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Antonino Pío (86 - 161; emperador: 138 - 161)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/antonino_pio.jpg" alt="antonino">
+            <p>Antonino Pío era miembro de una familia de origen galo procedente de Lanuvio. Su adopción por el
+                emperador Adriano le permitió ser nombrado emperador a la muerte de éste, iniciando un largo reinado
+                caracterizado por la calma y la prosperidad económica. La situación de los esclavos mejoró durante su
+                gobierno al tiempo que prohibió la persecución de los cristianos y permitió la circuncisión de los
+                judíos.<br>
+                <br> En las fronteras se vivieron períodos de intensa actividad, especialmente en Britania donde se
+                tuvo que construir un nuevo muro al norte del levantado por Adriano. En Africa, los ataques de los
+                mauritanos obligaron a avanzar posiciones en el interior del Atlas. También se vivieron algunas
+                revueltas internas entre los hebreos, en Acaya y Egipto. Por sus virtudes, Antonino recibió del Senado
+                el honorífico título de Pío. Marco Aurelio fue su sucesor.
 
             </p>
         </div>
