--- a/Practicas/FP/Emperadores/caligula.html
+++ b/Practicas/FP/Emperadores/caligula.html
@@ -11,21 +11,25 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Calígula (12 - 41; emperador: 37 - 41)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/caligula.jpg" alt="caligula">
+            <p>Al morir Tiberio le sucedió Cayo Julio César Germánico, más conocido como Calígula. Su sobrenombre se
+                debe al uso, desde pequeño, del calzado militar llamado caliga. Calígula era hijo de Germánico y
+                Agripina la mayor. Tiberio le adoptó y le designó sucesor junto a su sobrino Tiberio Gemelo pero el
+                Senado se decantó por Calígula, esperando de él que acabara con el régimen tiránico de su antecesor. En
+                un primer momento satisfizo a todos, pero pronto la situación cambió cuando ordenó matar a su primo
+                Tiberio Gemelo y subir los impuestos.<br>
+                <br> Los gastos crecieron desmesuradamente tanto por las campañas
+                militares emprendidas (Germania y la Galia) como por los triunfos que se realizaban a continuación. El
+                emperador empezaba a mostrar signos de desequilibrio mental al exigir honores divinos y desear que su
+                caballo favorito fuera nombrado senador. El régimen de terror motivó la organización de un complot en el
+                año 39. Los promotores fueron descubiertos y el emperador acentuó la política de terror, oganizándose un
+                segundo complot y siendo asesinado por los pretorianos el 24 de enero del año 41.
+
 
             </p>
         </div>
@@ -49,7 +53,6 @@
             <area target="_blank" alt="tiberio" title="tiberio" href="tiberio.html" coords="5,210,98,271" shape="rect">
             <area target="_blank" alt="trajano" title="trajano" href="trajano.html" coords="4,274,96,346" shape="rect">
         </map>
-
     </div>
 
     <footer>Última modificación: 29 de enero de 2002. Pulsa sobre las monedas para saber sobre los emperadores.</footer>
