--- a/Practicas/FP/Emperadores/marcoaurelio.html
+++ b/Practicas/FP/Emperadores/marcoaurelio.html
@@ -11,21 +11,21 @@
 <body>
     <p class="titulo"> EMPERADORES ROMANOS </p>
     <p class="emperors">
-        Adriano (76 - 138; emperador: 117 - 138)
+        Marco Aurelio (121 - 180; emperador: 161 - 180)
     </p>
     <div class="mainbody">
 
         <div class="maintext">
-            <img class="augusto" src="Img/adriano.jpg" alt="adriano">
-            <p>Adriano nació en la ciudad bética de Itálica, en el seno de una familia romana. Al quedar huérfano, fue
-                adoptado por el emperador Trajano. Buscó la paz como máximo objetivo.. Uno de sus primeros objetivos
-                sería conocer los problemas de los súbditos imperiales por lo que llevó a cabo una amplia serie de
-                viajes por todos los confines del Imperio, haciéndose eco de las necesidades que le eran presentadas. En
-                el año 134 regresó definitivamente a Roma. <br>
-                <br>Este momento de paz trajo prosperidad económica al imperio.
-                Adriano también se interesó por las reformas administrativas y económicas. En las cercanías de Tívoli
-                edificó una suntuosa villa que recibe el nombre de Villa Adriana donde recogió las reproducciones de las
-                obras de arte que más le impresionaron durante sus viajes. Como sucesor eligió a Antonino Pío.
+            <img class="augusto" src="Img/marcoaurelio.jpg" alt="marcoaurelio">
+            <p>Miembro de una familia de origen hispánico, Marco Aurelio recibió una esmerada educación interesándose
+                desde joven por la filosofía. Adriano obligó a Antonino Pío a adoptar al joven Marco Aurelio. A la
+                muerte de Antonino Pío, le sucedió. El reinado de Marco Aurelio supuso el inicio de la crisis general
+                que vivirá el Imperio a lo largo del siglo III. Se reclutó un nuevo ejército en el que participaron
+                esclavos y gladiadores.<br>
+                <br> El propio emperador tuvo que aportar sus joyas para sufragar los gastos. Pero el
+                esfuerzo económico dio sus frutos y tras casi seis años de guerra los bárbaros se retiraron. Pocos años
+                después hubo una nueva rebelión de bárbaros en el Danubio. El emperador fallecía en el transcurso de la
+                guerra en Viena. Le sucedió su hijo Cómodo.
 
             </p>
         </div>
