--- a/Practicas/FP/index.html
+++ b/Practicas/FP/index.html
@@ -14,7 +14,7 @@
             <li><a href="Menken/index.html">Menken</a></li>
             <li><a href="Menken2/index.html">Menken2</a></li>
             <li><a href="Emperadores/augusto.html">Emperadores</a></li>
-            
+            <li><a href="Survey/index.html">Encuesta</a></li>
         </ul>
     </div>
 </body>
