--- a/Practicas/FP/index.html
+++ b/Practicas/FP/index.html
@@ -15,6 +15,7 @@
             <li><a href="Menken2/index.html">Menken2</a></li>
             <li><a href="Emperadores/augusto.html">Emperadores</a></li>
             <li><a href="Survey/index.html">Encuesta</a></li>
+            <li><a href="survey2/index.html">Encuesta2</a></li>
         </ul>
     </div>
 </body>
