--- a/Practicas/30/products.html
+++ b/Practicas/30/products.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>Music Store</title>
 </head>
-<body>
-    <div class="fondoindex"></div>
+<body class="body-products">
+    <div class="fondopro"></div>
     <nav>
          <img class="logo" src="Img/logo.png" alt="logo">
          <div class="textnav">
