--- a/Practicas/30/contacts.html
+++ b/Practicas/30/contacts.html
@@ -7,7 +7,7 @@
     <title>Music Store</title>
 </head>
 <body>
-    <div class="fondoindex"></div>
+    <div class="fondo"></div>
     <nav>
          <img class="logo" src="Img/logo.png" alt="logo">
          <div class="textnav">
