--- a/Practicas/30/contacts.html
+++ b/Practicas/30/contacts.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Music Store</title>
 </head>
-<body>
+<body class="contactos">
     <div class="fondo"></div>
     <nav>
          <img class="logo" src="Img/logo.png" alt="logo">
@@ -20,6 +20,13 @@
 
 
     </nav>
-    
+    <p class="social">Social Media</p>
+    <div class="cont">
+        
+        <a href=""><img src="Img/face.png" alt="face"></a>
+        <a href=""><img src="Img/Insta.png" alt="insta"></a>
+        <a href=""><img src="Img/twi.png" alt="twi"></a>
+        <a href=""><img src="Img/wapp.png" alt="wapp"></a>
+    </div>
 </body>
 </html>
