--- a/Practicas/30/products.html
+++ b/Practicas/30/products.html
@@ -20,6 +20,42 @@
 
 
     </nav>
-    
+<div class="sell">
+    <div class="prodotti">
+
+        <img class="acu" src="Img/acoustic.jpeg" alt="acousticguitar">
+        <a href="">Acoustic Guitars</a>
+    </div>
+     
+    <div class="prodotti">
+
+        <img class="ele" src="Img/electric.jpeg" alt="electricguitar">
+        <a href="">Electric Guitars</a>
+    </div>
+
+    <div class="prodotti">
+
+        <img class="pianos" src="Img/piano.jpeg" alt="pianos">
+        <a href="">Pianos</a>
+    </div>
+
+    <div class="prodotti">
+
+        <img class="mic" src="Img/mic.jpeg" alt="mics">
+        <a href="">Mics</a>
+    </div>
+
+    <div class="prodotti">
+
+        <img class="amp" src="Img/amp.jpeg" alt="amp">
+        <a href=""> Amplifiers</a>
+    </div>
+
+    <div class="prodotti">
+
+        <img class="cable" src="Img/cable.jpeg" alt="cables">
+        <a href="">Cables</a>
+    </div>
+</div>   
 </body>
 </html>
