--- a/Practicas/30/index.html
+++ b/Practicas/30/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Music Store</title>
 </head>
-<body>
+<body class="bodyindex">
     <div class="fondoindex"></div>
     <nav>
          <img class="logo" src="Img/logo.png" alt="logo">
