--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="Practicas/27/index.html">Proyecto 27</a></li>
             <li><a href="Practicas/28/index.html">Proyecto 28</a></li>
             <li><a href="Practicas/29/index.html">Proyecto 29</a></li>
+            <li><a href="Practicas/30/index.html">Proyecto 30</a></li>
             <li><a href="Practicas/FP/index.html">FP</a></li>
         </ul>
     </div>
