--- a/Practicas/30/lessons.html
+++ b/Practicas/30/lessons.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Music Store</title>
 </head>
-<body>
+
+<body class="lessons">
     <div class="fondo"></div>
     <nav>
-         <img class="logo" src="Img/logo.png" alt="logo">
-         <div class="textnav">
+        <img class="logo" src="Img/logo.png" alt="logo">
+        <div class="textnav">
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
             <a href="lessons.html">Lessons</a>
             <a href="about.html">About Us</a>
             <a href="contacts.html">Contacts</a>
-         </div>
+        </div>
 
 
     </nav>
-    
+
+    <div class="textlessons">
+        <p class="teach">
+            Discover the joy of music through personalized lessons! Our experienced instructors offer one-on-one
+            training sessions, ranging from 30 minutes to one hour, tailored to your musical aspirations. Whether you’re
+            a beginner or aiming for advanced techniques, our platform provides expert guidance in playing instruments
+            or refining your vocal skills. Join us and unlock your musical potential!
+        </p>
+    </div>
 </body>
+
 </html>
